add announcemnet modal

--- a/src/app/college-marathon/college-marathon.component.html
+++ b/src/app/college-marathon/college-marathon.component.html
@@ -21,13 +21,13 @@
       </div>
 
       <div class="set-12 btnhldr">
-        <button type="button" mat-raised-button color="accent" (click)="popMarathonInfoDialog()">
+        <button type="button" mat-raised-button color="accent" (click)="popMarathonInfoDialog('awards')">
           <strong>Premios</strong>
         </button>
         <button type="button" mat-raised-button color="accent">
           <strong>Calendario</strong>
         </button>
-        <button type="button" mat-raised-button color="accent" (click)="popAnnouncement()">
+        <button type="button" mat-raised-button color="accent" (click)="popMarathonInfoDialog('announcement')">
           <strong>Convocatoria</strong>
         </button>
       </div>
