--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -11,6 +11,7 @@
 
     .set-7 {
       height: 100%;
+      min-height: 500px;
       background: url('../../../assets/images/illustration-register.png') no-repeat;
       background-size: 60%;
     }
@@ -224,9 +225,31 @@
   }
 
   .myteams {
-    margin-top: 30px;
-
     h3 {
+      margin-bottom: 20px;
+    }
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      * {
+        margin: 0;
+      }
+
+      mat-icon {
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .teamreg {
+    .myteams {
       margin-bottom: 20px;
     }
   }
