--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -205,9 +205,7 @@
       }
     }
 
-    .set-6 {
-      padding: 0;
-
+    .collabsavailable {
       .set-6:nth-child(odd) {
         padding-right: 10px;
       }
@@ -219,6 +217,10 @@
       .set-6 {
         margin-bottom: 20px;
       }
+    }
+
+    .set-6 {
+      padding: 0;
 
       .usrcrd {
         padding: 20px;
@@ -688,9 +690,10 @@
     padding: 20px;
   }
 
-  .collabsavailable {
+  .collabsavailable,
+  .availabletestimonies {
     .set-6 {
-      padding: 0;
+      padding: 0 !important;
       width: 100%;
     }
   }
