--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -234,6 +234,7 @@
     }
 
     button {
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: flex-start;
@@ -245,6 +246,10 @@
       mat-icon {
         margin-left: 10px;
       }
+    }
+
+    .linkhldr {
+      margin-bottom: 10px;
     }
   }
 
