--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -77,8 +77,9 @@
 
       img.full {
         width: 100%;
-        height: auto;
+        height: 100%;
         float: left;
+        object-fit: cover;
       }
 
       img.def {
