add topic coverage fix

--- a/src/app/college-marathon/single-team/single-team.component.html
+++ b/src/app/college-marathon/single-team/single-team.component.html
@@ -83,7 +83,7 @@
             </button>
           </div>
 
-          <div class="set-12 row">
+          <!-- <div class="set-12 row">
             <button mat-raised-button color="warn" [matMenuTriggerFor]="menu">
               <small>Otros Equipos</small>
             </button>
@@ -92,7 +92,7 @@
                 <small>{{team['name']}}</small>
               </button>
             </mat-menu>
-          </div>
+          </div> -->
         </mat-card>
       </div>
 
