--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,20 @@
 <div class="set-12 mainhldr">
+  <ng-container>
+    <div style="margin-top: 8em; margin-bottom: 8em; padding-top: 8em;">
+      <label for="file"> Subida </label>
+      <input type="file" name="file" id="file" (change)="selectFiles($event)" style="border: 1px solud black; width: 50px;" multiple>
+      <button (click)="uploadFile()"> subir </button>
+      
+      <div *ngFor="let a of output">
+        <div style="margin-top: 1em;">
+          <p> {{ a | json }} </p>
+          <mat-progress-bar  mode="determinate" value="{{a.progress}}"> </mat-progress-bar>
+        </div>
+      </div>  
+    </div>
+  </ng-container>
+
+
   <div class="app-pagelet" [user]="user" [path]="path" [coverDocument]="coverDocument" [open]="open"
     (openMenu)="getMenuStatus($event)" [open]="isProfile" (openProfileMenu)="getMenuProfileStatus($event)"
     *ngIf="isDataAvailable"></div>
