--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -160,6 +160,12 @@
           margin-left: 20px;
         }
       }
+
+      .otherteams {
+        position: absolute;
+        left: 240px;
+        bottom: -60px;
+      }
     }
 
     .teamtools {
@@ -665,6 +671,10 @@
           margin: 0;
           font-size: 17pt;
         }
+      }
+      
+      .otherteams {
+        left: 190px;
       }
     }
 
