--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -258,6 +258,40 @@
       }
     }
   }
+
+  .filters {
+    form {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      margin-bottom: 30px;
+
+      * {
+        margin: 0;
+      }
+    }
+
+    div {
+      width: 50%;
+    }
+
+    div:nth-child(odd) {
+      padding-right: 10px;
+    }
+
+    div:nth-child(even) {
+      padding-left: 10px;
+    }
+
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
+      margin: 0;
+    }
+
+    ::ng-deep .mat-form-field-wrapper {
+      padding: 0;
+    }
+  }
 }
 
 :host(.fixmobile) {
