--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -77,9 +77,10 @@
               </mat-form-field>
             </div>
             <div class="set-9">
-              <button type="button" mat-mini-fab color="primary" matTooltip="Agregar problema" matTooltipClass="tooltip"
-                (click)="popAddDocumentTheme()" *ngIf="isCollaborator">
+              <button type="button" mat-raised-button color="primary" class="wicon" (click)="popAddDocumentTheme()"
+                *ngIf="isCollaborator">
                 <mat-icon>add_circle</mat-icon>
+                <small>Agregar problema</small>
               </button>
             </div>
           </div>
