add share buttons

--- a/src/app/components/share-sheet/share-sheet.component.html
+++ b/src/app/components/share-sheet/share-sheet.component.html
@@ -14,6 +14,12 @@
         class="fb-xfbml-parse-ignore"></a>
     </div>
   </button>
+  <a href="https://www.linkedin.com/sharing/share-offsite/?url={{url}}" class="icon linkedin-net" target="_blank"></a>
+
+  <a class="twitter-share-button icon twitter-net"
+    href="https://twitter.com/intent/tweet?text=Mexicolectivo&url={{url}}&hashtags=mexicolectivo" target="_blank"></a>
+
+
   <!-- <button type="button" class="icon instagram-net" disabled></button>
   <button type="button" class="icon whatsapp-net" disabled></button>
   <button type="button" class="icon linkedin-net" disabled></button>
@@ -21,6 +27,7 @@
   <button type="button" class="icon twitter-net" disabled></button>
   <button type="button" class="icon tiktok-net" disabled></button> -->
 </div>
+
 
 <div class="set-12 doc-link">
   <mat-form-field appearance="outline">
