--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,10 @@
           <mat-progress-bar  mode="determinate" value="{{a.progress}}"> </mat-progress-bar>
         </div>
       </div>  
+
+      <div *ngFor="let location of locations" style="margin-top: 3em">
+        <p> {{ location }} </p>
+      </div>
     </div>
   </ng-container>
 
