--- a/src/app/components/move-copy-topic/move-copy-topic.component.html
+++ b/src/app/components/move-copy-topic/move-copy-topic.component.html
@@ -5,7 +5,8 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dlghd">
     <div class="set-10">
-      <h3>Mover {{topic['title']}}</h3>
+      <h3 *ngIf="action == 'move'">Mover {{topic['title']}}</h3>
+      <h3 *ngIf="action == 'copy'">Copiar {{topic['title']}}</h3>
     </div>
     <div class="set-2">
       <button type="button" mat-mini-fab color="primary" (click)="killDialog()" [disabled]="submitted">
@@ -14,7 +15,7 @@
     </div>
   </div>
 
-  <div class="set-12 dlgbdy">
+  <div class="set-12 dlgbdy" *ngIf="action == 'move'">
     <form class="set-12" [formGroup]="formGroup" (submit)="onMoveTopic(formGroup)">
       <mat-form-field appearance="outline">
         <mat-label>Tema</mat-label>
@@ -39,6 +40,37 @@
           [disabled]="sublayouts == null || submitted || formGroup.invalid">
           <mat-icon>exit_to_app</mat-icon>
           <small>Mover</small>
+        </button>
+        <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
+      </div>
+    </form>
+  </div>
+
+  <div class="set-12 dlgbdy" *ngIf="action == 'copy'">
+    <form class="set-12" [formGroup]="formGroup" (submit)="onCopyTopic(formGroup)">
+      <mat-form-field appearance="outline">
+        <mat-label>Tema</mat-label>
+        <mat-select (selectionChange)="onLayoutSelected($event)">
+          <mat-option *ngFor="let layout of layouts" [value]="layout._id">
+            <small>{{layout['category']['name']}}</small>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Subtema</mat-label>
+        <mat-select formControlName="toSublayout">
+          <mat-option *ngFor="let layout of sublayouts" [value]="layout._id">
+            <small>{{layout['category']['name']}}</small>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <div class="set-12 ctrls">
+        <button type="submit" mat-raised-button color="warn" class="wicon"
+          [disabled]="sublayouts == null || submitted || formGroup.invalid">
+          <mat-icon>content_copy</mat-icon>
+          <small>Copiar</small>
         </button>
         <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
       </div>
