--- a/src/app/components/testimony-dialog/testimony-dialog.component.html
+++ b/src/app/components/testimony-dialog/testimony-dialog.component.html
@@ -27,7 +27,7 @@
     </button>
   </div>
 
-  <div class="set-12 location">
+  <!-- <div class="set-12 location">
     <button type="button" mat-button color="primary" (click)="getLocation()">
       <mat-icon>place</mat-icon>
       <small>{{locationAvailable ? 'Cancelar ubicación' : 'Usar mi ubicación'}}</small>
@@ -41,7 +41,7 @@
     <div class="set-12" *ngIf="isMobile">
       <small>** Para usar tu ubicación debes activarla en tus preferencias</small>
     </div>
-  </div>
+  </div> -->
 
   <div class="set-12">
     <mat-stepper #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
