--- a/src/app/posts/components/use-tools-dialog/use-tools-dialog.component.html
+++ b/src/app/posts/components/use-tools-dialog/use-tools-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="set-12">
   <h3>¡Hola!</h3>
-  <p>Para hacer uso de las herramientas de las <strong>Voces Ciudadanas</strong> necesitas una cuenta.</p>
+  <p>Para hacer uso de las herramientas del <strong>Muro Colectivo</strong> necesitas una cuenta.</p>
 
   <div class="set-12 links">
     <p><a href="javascript:void(0)" (click)="killDialog(); utilityService.linkMe('/hub/signin-mobile')">Ingresar</a> |
